--- a/uec2_project/vivado/memory_game.runs/impl_1/usage_statistics_webtalk.html
+++ b/uec2_project/vivado/memory_game.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2018833</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue Jul  7 22:24:34 2020</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Jul  8 20:00:47 2020</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2017.3 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>9db13793f571413ba9d98164590a49fd</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>1</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>2</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>c6c0bad8-baa6-4159-9845-0c5f89d3fc7f</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>c6c0bad8-baa6-4159-9845-0c5f89d3fc7f</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -33,43 +33,60 @@
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>gui_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsrcwizard_specify_hdl_netlist_block_design=2</TD>
    <TD>addsrcwizard_specify_or_create_constraint_files=1</TD>
-   <TD>basedialog_cancel=1</TD>
-   <TD>basedialog_ok=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>constraintschooserpanel_add_files=1</TD>
-   <TD>filesetpanel_file_set_panel_tree=31</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=3</TD>
+   <TD>archiveprojectdialog_archive_name=1</TD>
+   <TD>archiveprojectdialog_choose_archive_location=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>archiveprojectdialog_include_run_results=1</TD>
+   <TD>basedialog_cancel=2</TD>
+   <TD>basedialog_ok=5</TD>
+   <TD>constraintschooserpanel_add_files=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>filesetpanel_file_set_panel_tree=77</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=4</TD>
    <TD>gettingstartedview_create_new_project=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>hjfilechooserrecentlistpreview_recent_directories=1</TD>
+   <TD>hjfilechooserrecentlistpreview_recent_directories=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_edit=4</TD>
+   <TD>mainmenumgr_export=2</TD>
+   <TD>mainmenumgr_file=4</TD>
+   <TD>mainmenumgr_flow=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_open_recent_file=2</TD>
+   <TD>mainmenumgr_open_recent_project=1</TD>
+   <TD>mainmenumgr_report=1</TD>
+   <TD>mainmenumgr_tools=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>msgtreepanel_message_view_tree=2</TD>
+   <TD>msgview_information_messages=1</TD>
    <TD>pacommandnames_add_sources=3</TD>
-   <TD>pacommandnames_auto_update_hier=2</TD>
+   <TD>pacommandnames_archive_project=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_auto_update_hier=4</TD>
    <TD>pacommandnames_src_replace_file=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>partchooser_family_chooser=1</TD>
+   <TD>partchooser_family_chooser=1</TD>
    <TD>partchooser_part_package_chooser=1</TD>
-   <TD>partchooser_part_speed_chooser=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>partchooser_part_speed_chooser=1</TD>
    <TD>partchooser_parts=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>partchooser_product_chooser=1</TD>
-   <TD>paviews_code=5</TD>
-   <TD>projectnamechooser_choose_project_location=1</TD>
+   <TD>partchooser_product_chooser=1</TD>
+   <TD>paviews_code=19</TD>
+</TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_choose_project_location=1</TD>
    <TD>projectnamechooser_create_project_subdirectory=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>projectnamechooser_project_name=1</TD>
+   <TD>projectnamechooser_project_name=1</TD>
    <TD>projecttab_reload=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>rdicommands_custom_commands=1</TD>
    <TD>rdicommands_properties=1</TD>
    <TD>srcchooserpanel_add_directories=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=2</TD>
-   <TD>srcmenu_ip_hierarchy=2</TD>
+   <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcmenu_ip_hierarchy=4</TD>
+   <TD>taskbanner_close=2</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsources=3</TD>
+   <TD>archiveproject=1</TD>
    <TD>editproperties=1</TD>
    <TD>newproject=1</TD>
-   <TD>runbitgen=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>updatesourcefiles=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>runbitgen=2</TD>
+   <TD>updatesourcefiles=1</TD>
    <TD>viewtaskrtlanalysis=1</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=2</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=3</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -337,7 +354,7 @@
     <TD>output_load=5.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>output_toggle=12.500000</TD>
     <TD>package=cpg236</TD>
-    <TD>pct_clock_constrained=2.000000</TD>
+    <TD>pct_clock_constrained=1.000000</TD>
     <TD>pct_inputs_defined=25</TD>
 </TR><TR ALIGN='LEFT'>    <TD>platform=nt64</TD>
     <TD>process=typical</TD>
@@ -763,8 +780,8 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>elapsed=00:00:29s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=491.184MB</TD>
-    <TD>memory_peak=741.934MB</TD>
+    <TD>memory_gain=491.203MB</TD>
+    <TD>memory_peak=741.949MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
